# fastapi-telemetry

./: .gitignore  README.md  pyproject.toml
fastapi_telemetry/: __init__.py  circuit_breaker.py  helpers.py  middleware.py
src/fastapi_telemetry/: __init__.py
tests/: test_circuit_breaker.py  test_helpers.py  test_middleware.py
