[project]
name = "fastapi-telemetry"
version = "0.0.2"
description = "Prometheus metrics middleware, circuit breaker listener, and metric helpers for FastAPI — zero project-specific dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Aleksandar Krsteski", email = "acikabubo@gmail.com" },
]
keywords = ["fastapi", "prometheus", "metrics", "circuit-breaker", "middleware", "observability"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "prometheus-client>=0.24.1",
    "starlette>=0.52.1",
]

[project.optional-dependencies]
circuit-breaker = [
    "pybreaker>=1.4.1",
]
all = [
    "pybreaker>=1.4.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "pybreaker>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/acikabubo/fastapi-telemetry"
Repository = "https://github.com/acikabubo/fastapi-telemetry"
Issues = "https://github.com/acikabubo/fastapi-telemetry/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--cov=fastapi_telemetry", "--cov-report=term-missing"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
